Add build to postinstall

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cover": "babel-node ./node_modules/.bin/babel-istanbul cover test/index.js | tap-spec",
     "lint": "eslint src test",
     "prepublish": "npm run lint && npm test && npm run clean && npm run build",
+    "postintall": "npm run build",
     "test": "babel-node test/index.js | tap-spec"
   },
   "repository": "agraboso/redux-api-middleware",
