Use relative path to babel

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cover": "babel-node ./node_modules/.bin/babel-istanbul cover test/index.js | tap-spec",
     "lint": "eslint src test",
     "prepublish": "npm run lint && npm test && npm run clean && npm run build",
-    "postinstall": "npm run build",
+    "postinstall": "./node_modules/.bin/babel src --out-dir lib",
     "test": "babel-node test/index.js | tap-spec"
   },
   "repository": "agraboso/redux-api-middleware",
